[package]
name = "cucumber"
version = "0.1.0"
edition = "2021"

default-run = "main"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
colorsys = "0.6.7"
eframe = "0.29.1"
egui-file-dialog = "0.7.0"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
indicatif = "0.17.6"
krakatau2 = { git = "ssh://github.com/zezic/Krakatau.git", rev = "c5093b5f94ce0e58931f80b283305b87b0eef824" }
md5 = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
xml-rs = "0.8.16"
xmltree = "0.11.0"

[dependencies.resvg]
version = "0.37"
default-features = false
