[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = { version = "1.0.197", features = ["derive"] }
strum_macros = "0.26.1"

[dependencies.sea-orm-migration]
version = "0.12.0"
features = ["sqlx-postgres", "runtime-tokio-rustls", "with-json"]